# facebook-graphql-scraper

./: .gitignore  DOCKER.md  Dockerfile  README.md  observe_cdp.py  open_chrome_profile.py  pyproject.toml  requirements.txt
fb_graphql_scraper/: .env.example  ENV_SETUP.md  example.py  facebook_graphql_scraper.py  setup_chromedriver_example.py  try_login.py
fb_graphql_scraper/pages/: page_optional.py
fb_graphql_scraper/utils/: chromedriver_manager.py  parser.py  session_manager.py
