[project]
name = "facebook-graphql-scraper"
version = "0.1.0"
description = "Implement Facebook scraper for post data retrieval"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Andyfcx", email = "dreamcastle.andy@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ipython==8.19.0",
    "pytz==2023.3.post1",
    "selenium-wire==5.1.0",
    "tqdm==4.66.1",
    "requests~=2.32.5",
    "setuptools~=67.6.0",
    "selenium~=4.39.0",
    "beautifulsoup4~=4.12.2",
    "jsonpath-ng",
]

[project.urls]
Homepage = "https://github.com/andyfcx/facebook-graphql-scraper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fb_graphql_scraper"]
