[project]
name = "facebook-graphql-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "beautifulsoup4==4.12.2",
    "blinker==1.9.0",
    "brotli==1.2.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cryptography==46.0.3",
    "decorator==5.2.1",
    "executing==2.2.1",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "hyperframe==6.1.0",
    "idna==3.11",
    "ipython==8.19.0",
    "jedi==0.19.2",
    "jsonpath-ng==1.7.0",
    "kaitaistruct==0.11",
    "matplotlib-inline==0.2.1",
    "numpy==2.3.5",
    "outcome==1.3.0.post0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "ply==3.11",
    "prompt-toolkit==3.0.52",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pygments==2.19.2",
    "pyopenssl==25.3.0",
    "pyparsing==3.2.5",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2023.3.post1",
    "requests==2.32.5",
    "selenium==4.39.0",
    "selenium-wire==5.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "tqdm==4.66.1",
    "traitlets==5.14.3",
    "trio==0.32.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.6.1",
    "wcwidth==0.2.14",
    "websocket-client==1.9.0",
    "wsproto==1.3.2",
    "zstandard==0.25.0",
]
